apps/media/shoko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoko
  namespace: media
spec:
  selector: { app: shoko }
  ports:
    - name: http
      port: 8111
      targetPort: 8111
