apps/media/shoko/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoko
  namespace: media
spec:
  rules:
    - host: shoko.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shoko
                port: { number: 8111 }
